changed: finalized analog scale picker, closes https://github.com/enketo/enketo-core/issues/309
- fixed current-value box and min label overlap on small screens
- vertical padding of main label
- added decimal support
- fixed clone repeat incorrect height

--- a/src/sass/core/_print.scss
+++ b/src/sass/core/_print.scss
@@ -243,6 +243,26 @@ label, legend, .trigger, .note {
     }
 }
 
+.or-appearance-analog-scale {
+    .show-value {
+        display: none;
+    }
+    .scale__ticks {
+        display: none;
+    }
+    .slider-vertical .slider-track {
+        border-right: 1px solid black;
+        margin-left: -8.5px;
+    }
+    .slider-horizontal .slider-track {
+        border-bottom: 1px solid black;
+        margin-top: -10px;
+    }
+    .slider-handle {
+        display: none;
+    }
+}
+
 // pages mode
 .pages.or {
     [role="page"] {
